Main content in - coming along nicely

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 /*borders for designing*/
-header, nav, img, body {
+header, nav, img, body, div {
   border: 1px solid white;
 }
 
@@ -24,7 +24,6 @@ header {
 }
 
 header img {
-  display: flex;
   position: fixed;
   align-self: center;
   left: 0px;
@@ -56,6 +55,69 @@ nav a {
   color: seashell;
 }
 
+/*Moving on to the hero section*/
+
+
 body {
-  margin-top: 75px;
+  margin-top: 70px;
+}
+
+.hero {
+  height: 700px;
+  width: 100%;
+  background-image: url("../images/img-mission-background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.hero-text {
+  background-color: black;
+  width: 100%;
+}
+
+.hero-text h2 {
+  margin: 20px;
+}
+
+.hero-text h4 {
+  margin: 15px;
+}
+
+/*Starting here on the lower content*/
+
+.content {
+  margin-top: 50px;
+  display: inline-block;
+  justify-content: center;
+}
+
+.tea-month {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  justify-content: center;
+  flex-flow: row wrap;
+  min-width: 300px;
+  max-width: 1000px;
+}
+
+.tea-box {
+  justify-content: space-around;
+  width: 300px;
+  margin: 0px 10px 10px 10px;
+}
+
+.tea-box img {
+  width: 100%;
+  max-height: 200px;
+  display: flex;
+}
+
+.tea-box h4 {
+  margin: 10px;
+  padding: 0px;
 }
