Trying final commit again - small edits

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -90,7 +90,6 @@ body {
 /*Starting here on the lower content*/
 
 .content {
-  margin-top: 50px;
   display: inline-block;
   justify-content: center;
 }
@@ -138,6 +137,7 @@ body {
   align-items: baseline;
   margin: 50px 0px 0px 0px;
   padding-bottom: 15px;
+  padding-top: 50px;
 }
 
 .locations h3, .locations p {
